--- a/pokedex-app/src/app/globals.css
+++ b/pokedex-app/src/app/globals.css
@@ -17,13 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-[#F9F7F3]
+  
 }
 
 @layer utilities {
